# BeatSmith

./: BeatSmith.py  README.md  ROADMAP.md  beatsmith_v3.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: install.sh
src/beatsmith/: __init__.py  __main__.py  audio.py  cli.py  db.py  fx.py  ia.py  inspect.py  pattern_adapter.py  pattern_constants.py
src/beatsmith.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/beatsmith/providers/: __init__.py  internet_archive.py  local.py
tests/: conftest.py  test_assemble_track.py  test_audio_snapshot.py  test_audio_utils.py  test_autopilot_dry.py  test_cli_outputs.py  test_db_utils.py  test_duration_bucket.py  test_harvest.py  test_ia_fuzz.py  test_inspect.py  test_local_provider.py  test_pattern_adapter.py  test_pattern_integration.py  test_quantization_groove.py  test_retry.py  test_reverb.py  test_safe_audio.py
tests/fixtures/: pattern.json
tools/: drum_patterns.py
update_notes/: 20251226_0.txt
