[project]
name = "beatsmith"
version = "0.1.0"
description = "Internet Archive powered stochastic beat builder"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "librosa",
    "soundfile",
    "requests",
    "mido",
]

[project.scripts]
beatsmith = "beatsmith.__main__:main"

[project.optional-dependencies]
test = [
    "pytest",
    "ruff",
    "hypothesis",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.data-files]
"tools" = ["tools/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
